Overflow fixed

--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -37,20 +37,6 @@
   box-sizing: border-box;
   outline: none;
 }
-#root {
-  overflow-y: scroll;
-}
-html,
-body {
-  overflow-y: scroll;
-  scrollbar-width: none;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-body {
-  height: 100%;
-}
 html,
 body,
 #root {
@@ -59,7 +45,6 @@ body,
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  -ms-overflow-style: none;
   display: none;
   @include xxs {
     display: block;
